--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
 
+      - name: Install and Build
+        run: |
+          npm install
+          npm run build
+
       - name: Build and Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.1
-        env:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        with:
           BRANCH: gh-pages
           FOLDER: build
-          BUILD_SCRIPT: npm install && npm run build
+        env:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
