--- a/package.json
+++ b/package.json
@@ -35,5 +35,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://qiangzi.github.io/github-action"
+  "homepage": "https://qiangzi7723.github.io/github-action"
 }
