--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Build and Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.1
         with:
-          BRANCH: master
+          BRANCH: gh-pages
           FOLDER: build
         env:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
